spec/compile_errors/duplicate_singleton_transient.cr
require "../../src/hardwire"

class SpecialService
end

class Container
  include HardWire::Container

  singleton SpecialService
  transient SpecialService
end
